# FaceID

./: .gitignore
faceid_ws/: CMakeLists.txt  README.md
faceid_ws/data/readme/: README_class_diagram.md  readme_activity_uml.md
faceid_ws/src/: face_dlib.cpp  face_dlib.h  face_mainwindow.cpp  face_mainwindow.h  face_mainwindow.ui  face_manager.cpp  face_manager.h  face_structs.h  face_worker.cpp  face_worker.h  main.cpp
